--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "dayjs": "^1.8.6",
     "jquery": "^3.3.1",
     "leaflet": "^1.4.0",
     "popper.js": "^1.14.4",
