--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "",
   "private": true,
   "scripts": {
-    "server": "webpack-dev-server --open",
-    "build": "webpack",
+    "server": "webpack-dev-server --open --config webpack.dev.babel.js",
+    "build": "webpack --config webpack.prod.babel.js",
     "deploy": "./deploy.sh"
   },
   "keywords": [],
   "author": "efwe",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsxobj": "^1.1.0",
     "style-loader": "^0.23.1",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack-dev-server": ">=3.1.11",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
