--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap-vue": "^2.0.0-rc.19",
     "dayjs": "^1.8.6",
-    "jquery": "^3.3.1",
-    "leaflet": "^1.4.0",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "obelisk.js": "^1.2.2",
+    "paho.mqtt.js": "^2.0.5",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
